# GameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  GameEngine.sln  README.md
Include/App/: Application.h  Renderer.h  Timing.h
Include/Engine/: Engine.h  Particle.h
Lib/: Engine.lib  EngineCore.lib  Framework.lib
Src/: main.cpp
Src/AppFramework/: Application.cpp  CMakeLists.txt  Renderer.cpp  Timing.cpp
Src/Demos/: CMakeLists.txt
Src/Engine/: CMakeLists.txt
Src/Engine/Math/: MathUtility.h  Vector3.h
Src/Engine/Physics/: Particle.cpp  Particle.h
Src/EngineCore/: CMakeLists.txt  Core.cpp  Particle.cpp
Src/Exercises/: CMakeLists.txt  Main.cpp
Src/Exercises/DX11/: CMakeLists.txt
Src/Exercises/DX11/Chapter1/: Chapter1.cpp
Src/Exercises/DX11/Chapter2/: Chapter2.cpp  Matrix.h
Src/Exercises/DX11/Chapter3/: Chapter3.md
Src/Exercises/DX11/Chapter4/: Chapter4.cpp
Src/Framework/: CMakeLists.txt  D3DApp.cpp  D3DApp.h  DebugLog.h  Timer.cpp  Timer.h  pch.h
include/Engine/: Core.h  Engine.h  MathUtility.h
src/: main.cpp
src/Engine/: Core.cpp
